create: fix and make new printbill with extension